#4 - Add slack logo / text / link in the footer | some fixes in footer icons - translate strings update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,7 +18,7 @@
         },
         "OPEN_SOURCE": {
             "HEADLINE": "GitHub",
-            "MSG": "We are Open Source! We publish our source code in GitHub, where you can have a look at our different projects and follow what we do."
+            "MSG": "We are an Open Source software development community. Feel free to contribute from GitHub and join our talks in Slack."
         }
     },
     "ES": "spanish",
