--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -18,7 +18,7 @@
         },
         "OPEN_SOURCE": {
             "HEADLINE": "GitHub",
-            "MSG": "We are Open Source! We publish our source code in GitHub, where you can have a look at our different projects and follow what we do."
+            "MSG": "Somos una comunidad de desarrollo de software libre. Contribuye desde GitHub y únete a la conversación en Slack."
         }
     },
     "ES": "spanish",
