Replaced footer's GitHub with OpenSource

--- a/src/assets/i18n/and.json
+++ b/src/assets/i18n/and.json
@@ -16,7 +16,7 @@
             "MSG": "Çi lo que quierê êh mantenerte informá, entonçê puedê çegînnô en nuêttrâ redê çoçialê, que tenemô toâ lâ que quierâ."
         },
         "OPEN_SOURCE": {
-            "HEADLINE": "GitHub",
+            "HEADLINE": "OpenSource",
             "MSG": "Çomô una comunidá de deçarroyo de software libre. Contribuye dêdde GitHub y únete a la comberçaçión en Slack."
         }
     },
