--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,7 +17,7 @@
             "MSG": "Follow us if you want to be updated with our latest news!"
         },
         "OPEN_SOURCE": {
-            "HEADLINE": "GitHub",
+            "HEADLINE": "OpenSource",
             "MSG": "We are an Open Source software development community. Feel free to contribute from GitHub and join our talks in Slack."
         }
     },
