--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,7 +17,7 @@
             "MSG": "Follow us if you want to be updated with the latest!"
         },
         "OPEN_SOURCE": {
-            "HEADLINE": "GitHub",
+            "HEADLINE": "OpenSource",
             "MSG": "Somos una comunidad de desarrollo de software libre. Contribuye desde GitHub y únete a la conversación en Slack."
         }
     },
