Fix Andalusian Open Source message literal
* Fix Open Source message Andalusian literal

--- a/src/assets/i18n/and.json
+++ b/src/assets/i18n/and.json
@@ -17,7 +17,7 @@
         },
         "OPEN_SOURCE": {
             "HEADLINE": "GitHub",
-            "MSG": "Çomô Open Source, açí que çi quierê bêh nuêttro código no tienê mâ que îh a nuêttro GitHub y exâl-le un bîttaço s nuêttro trabaho."
+            "MSG": "Çomô Open Source, açí que çi quierê bêh nuêttro código no tienê mâ que îh a nuêttro GitHub y exâl-le un bîttaço a nuêttro trabaho."
         }
     },
     "ES": "catteyâno",
