--- a/src/assets/i18n/and.json
+++ b/src/assets/i18n/and.json
@@ -20,6 +20,6 @@
             "MSG": "Çomô Open Source, açí que çi quierê bêh nuêttro código no tienê mâ que îh a nuêttro GitHub y exâl-le un bîttaço s nuêttro trabaho."
         }
     },
-    "ES": "catteyâno",
+    "ES": "câtteyano",
     "AND": "andalûh"
 }
