Adding new footer block (apps) and opensource new icons

--- a/src/assets/i18n/and.json
+++ b/src/assets/i18n/and.json
@@ -15,6 +15,10 @@
       "HEADLINE": "Redê Çoçialê",
       "MSG": "Çi lo que quierê êh mantenerte informá, entonçê puedê çegînnô en nuêttrâ redê çoçialê, que tenemô toâ lâ que quierâ."
     },
+    "APPS": {
+      "HEADLINE": "Andalûh Apps",
+      "MSG": "Dêccarga apps pa Android, Windows o Linux. Prueba nuêttro bot de Telegram."
+    },
     "OPEN_SOURCE": {
       "HEADLINE": "OpenSource",
       "MSG": "Çomô una comunidá de deçarroyo de software libre. Contribuye dêdde GitHub y únete a la comberçaçión en Slack."
