Included icon to teclao andaluh.

--- a/src/assets/i18n/and.json
+++ b/src/assets/i18n/and.json
@@ -17,7 +17,7 @@
     },
     "APPS": {
       "HEADLINE": "Andalûh Apps",
-      "MSG": "Dêccarga apps pa Android, Windows o Linux. Prueba nuêttro bot de Telegram."
+      "MSG": "Dêccarga apps pa Android, Windows o Linux. Êccribe n'Andalûh con nuêttro teclao. Prueba nuêttro bot de Telegram."
     },
     "OPEN_SOURCE": {
       "HEADLINE": "OpenSource",
