--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,7 +18,7 @@
     },
     "APPS": {
       "HEADLINE": "Andalûh Apps",
-      "MSG": "Read Wikipedia in Andalûh with AndaluWiki. Download apps for Android, Windows o Linux. Try our Telegram bot."
+      "MSG": "Download apps for Android, Windows o Linux. Write andalûh with our keyboard. Try our Telegram bot."
       },
     "OPEN_SOURCE": {
       "HEADLINE": "OpenSource",
