Some tweaks to i18n string

--- a/src/assets/i18n/and.json
+++ b/src/assets/i18n/and.json
@@ -3,7 +3,8 @@
     "ONE": "Iniçio",
     "TWO": "Quienê çemô",
     "THREE": "Contâtto",
-    "FOUR": "Repoçitorio"
+    "FOUR": "Repoçitorio",
+    "FIVE": "GitHub"
   },
   "FOOTER": {
     "NEWSLETTER": {
@@ -17,7 +18,7 @@
     },
     "APPS": {
       "HEADLINE": "Andalûh Apps",
-      "MSG": "Dêccarga apps pa Android, Windows o Linux. Êccribe n'Andalûh con nuêttro teclao. Prueba nuêttro bot de Telegram."
+      "MSG": "Dêccarga apps pa Android, Windows o Linux. Êccribe n'Andalûh con nuêttro teclao predîttibo. Uça er bot en Telegram."
     },
     "OPEN_SOURCE": {
       "HEADLINE": "OpenSource",
