Better english strings translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,8 +2,8 @@
   "MENU": {
     "ONE": "Home",
     "TWO": "Who are we?",
-    "THREE": "Projects",
-    "FOUR": "Contact",
+    "THREE": "Contact",
+    "FOUR": "Repository",
     "FIVE": "GitHub"
   },
   "FOOTER": {
